--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="preston.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="#" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,9 +25,9 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Preston Lim</p>
-					<p class="text-title-company">Associate Software Engineer</p>
-					<p class="text-title-company">Data Science Division, GovTech</p>
+					<p class="text-name">Philip Pang</p>
+					<p class="text-title-company">Head</p>
+					<p class="text-title-company">Digital & Marcom, SFIC</p>
 				</div>
 				<div class="col">
 					<img src="https://github.com/Pnietz/digital-namecard/blob/master/SFIC%20Logo_full%20colour.jpg" alt="Company Logo">
@@ -44,7 +44,7 @@
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">preston@data.gov.sg</p>
+						<p class="text-detail">pppofc@gmail.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,15 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com.sg/maps/place/GovTech+Hive/@1.2998708,103.7871504,17z/
-		data=!3m1!4b1!4m5!3m4!1s0x31da1a457344a501:0x2202a995a6abc728!8m2!3d1.2998708!4d103.7893391">
+		<a href="https://www.google.com.sg/maps/place/9+Jurong+Town+Hall+Rd,+Singapore+609431/@1.3287401,103.739575,17z/data=!3m1!4b1!4m5!3m4!1s0x31da100869c86701:0xd9067d237b1fc070!8m2!3d1.3287347!4d103.741769">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">1 Fusionopolis, Sandcrawler, #09-01, 138577</p>
+						<p class="text-detail">9 Jurong Town Hall Rd #03-01 S(609431)</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
