--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Digital & Marcom, SFIC</p>
 				</div>
 				<div class="col">
-					<img src="https://raw.githubusercontent.com/Pnietz/digital-namecard/master/SFIC%20Logo_full%20colour.jpg" alt="Company Logo">
+					<img src="https://raw.githubusercontent.com/Pnietz/digital-namecard/master/SFIC%20Logo.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
